# user-server-rust

./: .env_prod  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile.grpc  Dockerfile.http  README.md  _typos.toml  build.rs  cliff.toml  deny.toml  docker-compose.yml  prod.yml
.github/workflows/: deploy.yml  release.yml
examples/: conf.rs  gen_jwt.rs  hash_pwd.rs
migrations/: 20260205081131_create_user_table.up.sql
proto/user/: user.proto
src/: grpc_server.rs  http_server.rs  lib.rs
src/app/: server.rs
src/common/: json.rs  mod.rs  path.rs  query.rs  serde.rs  valid.rs
src/conf/: app.rs  database.rs  grpc.rs  http.rs  mod.rs  redis.rs
src/db/: mod.rs  pgsql.rs
src/factory/: client.rs
src/handlers/common/: model.rs
src/handlers/user/: login.rs  register.rs
src/log/: logger.rs
src/middlewares/auth/: auth_layer.rs  identity.rs  jwt.rs  mod.rs  principal.rs
src/middlewares/cors/: app_cors.rs  mod.rs
src/pb/: mod.rs  user.rs
src/response/: errors.rs  mod.rs  resp.rs
src/router/: mod.rs  user.rs  version.rs
src/service_impl/: user.rs
src/state/: app_state.rs
src/utils/: crypto.rs  latency.rs  mod.rs  timezone.rs
